added api gateway

--- a/apigateway/src/main/resources/bootstrap.yml
+++ b/apigateway/src/main/resources/bootstrap.yml
@@ -6,3 +6,7 @@ spring:
       discovery:
         enabled: true
         service-id: config-server
+eureka:
+  instance:
+    lease-expiration-duration-in-seconds: 2
+    lease-renewal-interval-in-seconds: 1
